# Asyncio-TCP-Server-Client-Example-test-task

./: .gitignore  README.md  README.ru.md  client.py  main.py  pyproject.toml  server.py
scripts/: run_client.py  run_demo.py  run_server.py
src/async_tcp_demo/: __init__.py  client.py  config.py  logging_config.py  metrics.py  protocol.py  server.py
tests/: conftest.py  test_client.py  test_metrics.py  test_protocol.py  test_server.py
